--- a/style.css
+++ b/style.css
@@ -1,31 +1,24 @@
-.section1{
-  margin-left: 200px;
-  margin-top:150px;
-  font-family: sans-serif;
-  float: left;
-}
-.first_box{
-  margin-left: 850px;
-  margin-top:150px;
-  width: 500px;
+.first_box {
   background-color: #b300b3;
-  padding: 5px;
+  border-radius: 10px;
   text-align: center;
-  border-radius: 5px;
 }
-body{
+body {
   background-image: url(https://media.istockphoto.com/photos/pink-background-wall-picture-id848765404?k=20&m=848765404&s=612x612&w=0&h=ijscecmpneQ5Zd-ni-OPd51G3W0IO_2l953QM-fji2U=);
   background-size: cover;
-  /* background-color: #ff4d88; */
   background-repeat: no-repeat;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.second_box{
+.second_box {
   background-color: white;
-  float: right;
   width: 500px;
   color: black;
+  padding: 10px;
+  border-radius: 10px;
 }
-input[type=text], input[type=password]{
+.lf--input {
   width: 95%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -34,21 +27,20 @@ input[type=text], input[type=password]{
   border-radius: 8px;
   box-sizing: border-box;
   align-content: center;
-  text-align: center;
 }
-button {
-  background-color: #04AA6D;
+.submit-btn {
+  background-color: #04aa6d;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 80%;
-
+  border-radius: 10px;
 }
-/* .head{
-  font-size: 30px;
-} */
-body{
-  color: white;
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
