--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ nav img {
 }
 
 @media (max-width: 768px) {
-  .menu{
+  .menu {
     padding-top: 30px;
   }
   .menu ul {
@@ -249,7 +249,7 @@ nav img {
     height: 100%;
     z-index: 990;
   }
-  .menu.active ul{
+  .menu.active ul {
     display: flex;
     align-items: center;
   }
@@ -278,7 +278,7 @@ nav img {
   font-family: Dosis;
 }
 
-.contact-us {
+.bg {
   background: #f1f7ff;
 }
 .contact {
@@ -289,4 +289,38 @@ nav img {
 .number {
   margin-left: 650px;
   font-size: 20px;
+}
+
+.card {
+  width: 300px;
+  box-shadow: 0 0 40px 0 rgb(0 0 0 / 12%);
+  padding: 20px 40px;
+  border-radius: 10px;
+  margin: 0 20px;
+  height: 208px;
+  background-color: #ffff;
+}
+.card h3 {
+  color: #5a5d80;
+  margin-bottom: 10px;
+}
+.card-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width:668px) {
+  .card-container{
+    flex-direction: column;
+  }
+  .card {
+    margin: 20px;
+  }
+}
+.courses{
+  padding-bottom: 100px;
+}
+.contact-us p{
+  text-align: center;
+  color: rgb(0 0 0 / 50%);
 }
